Created Login and Entries page

--- a/static/index.html
+++ b/static/index.html
@@ -8,9 +8,28 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Welcome to the page</h1>
-    <h2>Page One</h2>
-    <a href="page2.html">Link to page 2</a>
-    <img src="images/obam ammaa.jpg" alt="obama">
+    <h1>Anthony Alicea</h1>
+    <ol>
+        <li>Minecraft</li>
+        <li>FromSoftware</li>
+        <li>Programming</li>
+        <li>Boba</li>
+        <li>Coffee</li>
+        <li>Ramen</li>
+        <li>Sushi</li>
+        <li>Java</li>
+        <li>Virtual Reality</li>
+        <li>D&D</li>
+    </ol>
+
+    <a href="https://www.minecraft.net/en-us">Minecraft</a>
+    <a href="https://thictony.itch.io/">My Itch.io</a>
+    <p>The things picked above were chosen either because they're valued to me, or I enjoy them. Games like Minecraft and anything made by FromSoftware have been a huge
+        part of gaming for me. Both Mojang and FromSoftware are extremely infulential to me in terms of game design and where inspiration is drawn. As goes for the rest,
+        I picked programming because it's one of my favorite activities, and then Java because it's (currently) my favorite language. The food was picked because they're some of
+        my favorite meals (and they're relatively inexpensive).
+    </p>
+    <a href="login.html">Login</a>
+    
 </body>
 </html>
